Added Bow functionalities

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/3D_Menu/levelMap/MainMeru_Asian_Village_Map.MainMeru_Asian_Village_Map
-EditorStartupMap=/Game/3D_Menu/levelMap/MainMeru_Asian_Village_Map.MainMeru_Asian_Village_Map
+GameDefaultMap=/Game/Levels/EmptyLevel.EmptyLevel
+EditorStartupMap=/Game/Levels/EmptyLevel.EmptyLevel
 GameInstanceClass=/Game/Saving/MyGameInstance.MyGameInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
